# easy_investment_back

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  main.py  openapi.json  pyproject.toml  teste_logos.py
api/: asset_router.py  auth_router.py  profile_router.py  user_router.py
core/: config.py  security.py
infrastructure/: cache.py  database.py  providers.py
models/: asset.py  user.py
services/: asset_service.py
